# Course_IntroToProgramming_Lab-2.5

./: main.py  main1.py  pyproject.toml
Documentation/: mkdocs.yml  pyproject.toml
Documentation/docs/: index.md  print.md
