[tool.poetry]
name = "documentation"
version = "0.1.0"
description = ""
authors = ["Adriel E. González Martínez <adgonzalez@forwardlearning.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs-material = "^8.2.15"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
